# trin

./: Cargo.toml
.github/workflows/: rust.yml
crates/ethportal-api/src/types/execution/: header_with_proof.rs
crates/portalnet/src/: discovery.rs
crates/subnetworks/history/src/: storage_migration.rs
crates/subnetworks/state/src/validation/: validator.rs
crates/utils/src/: submodules.rs
crates/validation/src/: accumulator.rs  header_validator.rs
ethportal-api/: Cargo.toml
ethportal-api/src/: lib.rs  verkle.rs
ethportal-api/src/assets/test/: beacon_block_verkle_devnet6.json
ethportal-api/src/types/: cli.rs  mod.rs  portal_wire.rs  verkle.rs
ethportal-api/src/types/consensus/: beacon_block.rs  beacon_state.rs  body.rs  execution_payload.rs  fork.rs  mod.rs
ethportal-api/src/types/consensus/light_client/: bootstrap.rs  finality_update.rs  header.rs  optimistic_update.rs  update.rs
ethportal-api/src/types/consensus/verkle/: execution_witness.rs  mod.rs  state_diff.rs  verkle_proof.rs
ethportal-api/src/types/content_key/: mod.rs  verkle.rs
ethportal-api/src/types/content_value/: beacon.rs  mod.rs  verkle.rs
ethportal-api/src/types/jsonrpc/: endpoints.rs  request.rs
portal-bridge/src/: cli.rs  main.rs
portal-bridge/src/bridge/: mod.rs  verkle.rs
portal-bridge/src/types/: network.rs
portalnet/src/: events.rs
rpc/src/: builder.rs  lib.rs  verkle_rpc.rs
src/: lib.rs
testing/ethportal-peertest/src/scenarios/: state.rs
trin-execution/: Cargo.toml
trin-execution/src/: cli.rs  main.rs
trin-execution/src/subcommands/: export_to_content_store.rs  mod.rs
trin-execution/src/trie_walker/: mod.rs
trin-execution/src/types/: trie_proof.rs
trin-metrics/src/: labels.rs
trin-storage/src/versioned/: mod.rs
trin-storage/src/versioned/id_indexed_v1/: mod.rs  sql.rs
trin-verkle/: Cargo.toml  README.md
trin-verkle/src/: events.rs  jsonrpc.rs  lib.rs  network.rs  storage.rs  validator.rs
trin-verkle/src/validation/: error.rs  mod.rs  validator.rs
