[package]
name = "trin-verkle"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/ethereum/trin/tree/master/trin-verkle"
license = "GPL-3.0"
readme = "README.md"
keywords = ["ethereum", "portal-network"]
categories = ["cryptography::cryptocurrencies"]
description = "Verkle state network subprotocol for Trin."
authors = ["https://github.com/ethereum/trin/graphs/contributors"]

[dependencies]
alloy-primitives = { version = "0.7.0", features = ["getrandom"] }
anyhow = "1.0.68"
discv5 = { version = "0.4.1", features = ["serde"] }
ethportal-api = { path = "../ethportal-api" }
parking_lot = "0.11.2"
portalnet = { path = "../portalnet" }
portal-verkle-primitives = { git = "https://github.com/morph-dev/portal-verkle-primitives.git", rev = "640fbe4f6488a7d686d8df4561f1c7d6e8dc8403" }
serde_json = "1.0.89"
thiserror = "1.0.57"
tokio = {version = "1.14.0", features = ["full"]}
tracing = "0.1.36"
trin-storage = { path = "../trin-storage" }
trin-validation = { path = "../trin-validation" }
utp-rs = { git = "https://github.com/ethereum/utp", tag = "v0.1.0-alpha.12" }
